# pyjwt-rs

./: .gitignore  .pre-commit-config.yaml  .release-please-config.json  CHANGELOG.md  COMPATIBILITY_CHECKLIST.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASING.md  VERSIONING.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  compatibility-gap.yml  release-packaging.yml
.github/workflows/: ci.yml  pr-title.yml  release-pipeline.yml  release-please.yml  release.yml
python/jwt/: algorithms.py  api_jws.py  api_jwt.py  exceptions.py  jwk_set_cache.py  jwks_client.py  types.py  warnings.py
python/jwt_rs/: __init__.py  algorithms.py  api_jwk.py  api_jws.py  api_jwt.py  utils.py
scripts/: benchmark_decode_components.py  benchmark_same_api.py  plot_benchmark.py  pytest_gate.py  release.py  update_readme_bench.py
src/: lib.rs
tests/: test_pyjwt_compat.py  test_upstream_algorithms.py  test_upstream_api_jwk.py  test_upstream_api_jws.py  test_upstream_api_jwt.py  utils.py
tests/keys/: __init__.py
