[package]
name = "pyjwt-rs"
version = "1.2.1"
edition = "2024"
description = "Rust-backed PyJWT-compatible JWT library for Python"
license = "MIT"
repository = "https://github.com/StatPan/pyjwt-rs"
homepage = "https://github.com/StatPan/pyjwt-rs"
readme = "README.md"
authors = ["statpan"]

[lib]
name = "_rust_pyjwt"
crate-type = ["cdylib"]

[features]
# Build OpenSSL from source instead of linking against the system copy.
# Used by CI wheel jobs so each platform produces a self-contained binary.
vendored-openssl = ["openssl/vendored"]

[dependencies]
base64 = "0.22.1"
ecdsa = "0.16.9"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
k256 = { version = "0.13.4", features = ["ecdsa", "pkcs8", "pem"] }
openssl = "0.10.78"
p521 = { version = "0.13.3", features = ["ecdsa", "pkcs8", "pem"] }
pyo3 = { version = "0.28.3", features = ["extension-module"] }
sec1 = "0.7.3"
serde_json = "1.0.145"
sha2 = "0.10.9"
hmac = "0.12.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
