[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "pyjwt-rs"
version = "1.2.2"
description = "Rust-backed PyJWT-compatible JWT library for Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "statpan" }
]
keywords = ["jwt", "pyjwt", "rust", "pyo3", "openssl", "json-web-token", "authentication"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "cryptography>=45.0.0",
]

[project.urls]
Homepage = "https://github.com/StatPan/pyjwt-rs"
Repository = "https://github.com/StatPan/pyjwt-rs"
Changelog = "https://github.com/StatPan/pyjwt-rs/blob/main/CHANGELOG.md"
Issues = "https://github.com/StatPan/pyjwt-rs/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
bench = [
    "pyjwt>=2.12",
]

[tool.maturin]
python-source = "python"
module-name = "jwt_rs._rust_pyjwt"
features = ["pyo3/extension-module"]
